feat(Message Timestamp):  Show timestamps for each user and bot message.     - Store chat timestampt on state pinia.     - Chat bot can now recall the previous conversation.     - Added new datasets for faqs.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test</title>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+		/>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Conversational Chatbot for FAQs</title>
+    
+    <meta name="title" content="Jerome Avecilla | Conversational Chatbot for FAQs" />
+    <meta
+			name="description"
+			content="A conversational chat application built with Vue 3, Vite, and TypeScript, integrating generative AI to provide real-time, interactive responses, similar to popular AI chat platforms. This project leverages modern web technologies for a sleek, responsive user experience with a focus on maintainability and performance. "
+		/>
+		<meta name="author" content="Jerome Avecilla" />
+
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    
   </head>
   <body>
     <div id="app"></div>
